XLC's ReceiveUserControl's frontend bug fixed.

--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -10,8 +10,8 @@
              HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Initialized="UserControl_Initialized" >
 
     <Grid>
-        <Rectangle Fill="WhiteSmoke" Opacity=".5" MouseDown="Rectangle_MouseDown" />
-        <Border CornerRadius="10" BorderThickness="2" BorderBrush="Green"  Background="White" Height="550" Width="700">
+        <Rectangle Fill="Gray" Opacity=".5" MouseDown="Rectangle_MouseDown" />
+        <Border CornerRadius="10" BorderThickness="2" BorderBrush="Green"  Background="White" Height="500" Width="700">
             <Grid Margin="5,5,5,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"  />
