--- a/src/XelsPCHDesktopWalletApp/Views/Pages/AdvancedPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/AdvancedPage.xaml
@@ -58,7 +58,7 @@
                     </Grid>
                 </StackPanel>
 
-                <StackPanel Name="AboutSP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
+                <StackPanel Name="AboutSP" Margin="0,0,10,10" Grid.Column="1">
                     <Grid Name="AboutGrid" Height="460" Background="WhiteSmoke" Margin="0,20,5,0" HorizontalAlignment="Left">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="214"></ColumnDefinition>
