--- a/src/XelsXLCDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
@@ -10,13 +10,13 @@
 
     <Grid Background="White" Margin="100 5" x:Name="Bels_Send_Page">
         <StackPanel>
-            <Grid>
+            <!--<Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <!--Address-->
+                --><!--Address--><!--
                 <Border Grid.Row="0">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -31,7 +31,7 @@
                     </Grid>
                 </Border>
 
-                <!--Amount-->
+                --><!--Amount--><!--
                 <Border Grid.Row="1">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -64,7 +64,24 @@
 
                     </Grid>
                 </Border>
-            </Grid>
+            </Grid>-->
+
+            <Label FontSize="20" Margin="10,0,0,10" Content="To Address" />
+            <TextBox Grid.Row="1" x:Name="textToAddress" BorderBrush="#FFC9D6C9" />
+
+            <Label Grid.Row="0" FontSize="20" Margin="10,0,0,10" Content="Amount"/>
+            <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
+            <TextBlock x:Name="belsHidden" Text="BELS" Visibility="Hidden" />
+
+            <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="Send Now" 
+                        Background="Green"  
+                        Foreground="White" Margin="0,10,0,0" >
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </StackPanel>
     </Grid>
 </Page>
