--- a/src/XelsPCHDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
@@ -71,13 +71,13 @@
             </Grid>-->
 
             <Label FontSize="20" Margin="10,0,0,10" Content="To Address" />
-            <TextBox Grid.Row="1" x:Name="textToAddress" BorderBrush="#FFC9D6C9" />
+            <TextBox x:Name="textToAddress" BorderBrush="#FFC9D6C9" />
 
-            <Label Grid.Row="0" FontSize="20" Margin="10,0,0,10" Content="Amount"/>
-            <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
+            <Label FontSize="20" Margin="10,0,0,10" Content="Amount"/>
+            <TextBox x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
             <TextBlock x:Name="belsHidden" Text="BELS" Visibility="Hidden" />
 
-            <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="Send Now" 
+            <Button x:Name="sendButton" Click="SendButton_Click"  Content="Send Now" 
                         Background="Green"  
                         Foreground="White" Margin="0,10,0,0" >
                 <Button.Resources>
